@@ -3,6 +3,9 @@
                           avrtest NEWS
                           ============
 
+* Support syscalls LOG_FMT_F7T etc. to log libgcc's              2024-06-10
+  internal IEEE double representation.
+
 * Support syscalls like                                    r339  2023-11-14
 
       long double avrtest_sinl (long double);
